fixed project title and description alignment

--- a/src/components/Portfolio/portfolio.css
+++ b/src/components/Portfolio/portfolio.css
@@ -238,11 +238,13 @@ max-width: 100vw;
     margin-left: 28%;
 }
 .project-title{
-    margin-left: 35vw;
-}
+    position: absolute;
+    left: 25vw;
+    top: 10vh;
+    }
 .project-description{
     padding-top: 0;
-    margin-left: 37vw;
+    left: 6vw;
 }
 .summary-video {
    margin-left: 30%;
